<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wordpress.juniadev.musicalstructure.SearchActivity">

    <LinearLayout
        style="@style/mainLayout"
        android:orientation="vertical">

        <TextView
            style="@style/secondaryText"
            android:text="@string/search_explanation"
            android:layout_marginBottom="@dimen/main_padding" />

        <SearchView
            style="@style/searchBox"
            android:layout_marginBottom="@dimen/main_padding"/>

        <CheckBox
            style="@style/searchCheckbox"
            android:text="@string/album_title"/>

        <CheckBox
            style="@style/searchCheckbox"
            android:text="@string/song_title"/>

        <Button
            android:id="@+id/perform_search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_activity"/>

    </LinearLayout>

</ScrollView>
