<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_search_results"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wordpress.juniadev.musicalstructure.SearchResultsActivity">

    <LinearLayout
        style="@style/mainLayout"
        android:orientation="vertical">

        <TextView
            style="@style/secondaryText"
            android:text="@string/search_results_explanation"
            android:layout_marginBottom="@dimen/main_padding" />

        <TextView
            style="@style/primaryText"
            android:text="@string/album_title"
            android:layout_marginBottom="@dimen/main_padding"/>

        <TextView
            android:id="@+id/search_result_album"
            style="@style/searchResult"
            android:text="Trolls Movie Soundtrack" />

        <TextView
            style="@style/primaryText"
            android:text="@string/song_title"
            android:layout_marginTop="@dimen/main_padding"
            android:layout_marginBottom="@dimen/main_padding"/>

        <TextView
            android:id="@+id/search_result_song"
            style="@style/searchResult"
            android:text="Can't stop the feeling!" />


    </LinearLayout>
</ScrollView>
